<resources>
    <string name="app_name">Тест</string>
    <string name="test_card_title">Карточка теста</string>
    <string name="test_flow_title">Прохождение теста</string>
    <string name="test_result_title">Результат</string>
    <string name="start_test">Начать тестирование</string>
    <string name="finish_test">Завершить тест</string>
    <string name="retry">Повторить</string>
    <string name="retry_test">Пройти еще раз</string>
    <string name="load_error">Ошибка загрузки данных</string>
    <string name="test_title_placeholder">Аттестация по информационной безопасности</string>
    <string name="test_description_placeholder">Описание теста появится после загрузки данных.</string>
    <string name="time_limit_placeholder">Время на блок: 25:59:59</string>
    <string name="max_score_placeholder">Максимальный балл: 0</string>
    <string name="passing_score_placeholder">Проходной балл: 0</string>
    <string name="test_questions_title">Вопросы теста</string>
    <string name="topic_placeholder">Категория</string>
    <string name="question_placeholder">Название вопроса</string>
    <string name="answer_placeholder">Вариант ответа</string>
    <string name="selected_answer">Выбранный ответ</string>
    <string name="result_title">Результат</string>
    <string name="result_status_placeholder">Статус: в ожидании</string>
    <string name="score_placeholder">Баллы: 0</string>
    <string name="correct_answers_placeholder">Правильных ответов: 0</string>
    <string name="score_per_question">Баллы за вопрос</string>
    <string name="score_per_question_format">Баллы за вопрос: %d</string>
    <string name="avatar">avatar</string>
    <string name="info">info</string>
    <string name="education">education</string>
    <string name="search">search</string>
    <string name="menu">menu</string>
    <string name="back">Назад</string>
    <string name="test">test</string>
    <string name="cover">cover</string>
    <string name="in_process">В процессе</string>
    <string name="go_through_to">Пройти до</string>
    <string name="date">30 декабря 2024</string>
    <string name="name_test">Аттестация по информационной безопасности для сотрудников офиса</string>
    <string name="additional_info">Дополнительная информация</string>
    <string name="additional_info_2">В итоговый результат попадёт последняя завершённая попытка</string>
    <string name="your_awards">Твоя награда</string>
    <string name="certificate">Сертификат</string>
    <string name="text_btn_start">Начать тестирование</string>
    <string name="description">Новый год - это время для новых начинаний и возможностей. Мы с нетерпением ждем продолжения нашего партнерства и совместных проектов в грядущем году. Мы уверены, что совместными усилиями мы сможем достичь еще больших высот и преуспеть в наших общих целях. Желаем вам и вашим близким счастья, здоровья и успехов в Новом году. Пусть этот год будет наполнен радостью, достижениями и благополучием. Мы надеемся, что наше сотрудничество будет продолжаться и приносить взаимную пользу и удовлетворение.</string>
    <string name="test_tv">Тест</string>
    <string name="item_title_test">Название вопроса из категории, длинный вопрос в 2 строки для проверки межстрочного расстояния</string>
    <string name="default_response">Вариант ответа 2, длинный, показывает поведение блока</string>
    <string name="time_block">Время на блок:</string>
    <string name="time">23:59:59</string>
    <string name="eye_off">Eye off</string>
    <string name="exit">Exit</string>
    <string name="info_bottom">Information about the test</string>
    <string name="info_player_test">Осталось 50 вопросов без ответов.\nДля успешного прохождения тестирования необходимо ввести ответ на каждый вопрос.</string>
    <string name="unanswered_questions_toast">Осталось %d вопросов без ответов.\nДля успешного прохождения тестирования необходимо ввести ответ на каждый вопрос.</string>
    <string name="unanswered_questions_preview">Осталось 3 вопроса без ответов.\nДля успешного прохождения тестирования необходимо ввести ответ на каждый вопрос.</string>
    <string name="maximum_score">Максимальный балл: 320</string>
    <string name="passing_score">Проходной балл: 250</string>
    <string name="my_training">Моё обучение</string>
    <string name="games_and_rewards">Игры и награды</string>
    <string name="knowledge_base">База знаний</string>
    <string name="result">Результат</string>
    <string name="done">выполнено</string>
    <string name="not_done">не выполнено</string>
    <string name="score">Баллы</string>
    <string name="start_date">Дата начала:</string>
    <string name="end_date">Дата завершения:</string>
    <string name="reward_points_placeholder">600</string>
    <string name="reward_coins_placeholder">20</string>
    <string name="question_index_placeholder">1</string>
    <string name="question_number_preview">14</string>
    <string name="score_per_question_preview">Баллы за вопрос: 20</string>
    <string name="score_value_placeholder">1000</string>
    <string name="start_time_placeholder">08:00</string>
    <string name="end_time_placeholder">23:59</string>
    <string name="date_full_placeholder">25 декабря 2024</string>
    <string name="max_score_format">Максимальный балл: %d</string>
    <string name="passing_score_format">Проходной балл: %d</string>
    <string name="correct_answers">Правильных ответов:</string>
    <string name="from">из</string>
    <string name="correct_answers_format">Правильных ответов: %1$d %2$s %3$d</string>
</resources>
