<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/testCardFragment">

    <fragment
        android:id="@+id/testCardFragment"
        android:name="com.example.testapp.presentation.TestCardFragment"
        android:label="@string/test_card_title">
        <action
            android:id="@+id/action_testCardFragment_to_testFragment"
            app:destination="@id/testFragment" />
    </fragment>

    <fragment
        android:id="@+id/testFragment"
        android:name="com.example.testapp.presentation.TestFragment"
        android:label="@string/test_flow_title">
        <action
            android:id="@+id/action_testFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.testapp.presentation.ResultFragment"
        android:label="@string/test_result_title" />
</navigation>
