<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/errorGroup"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_error"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_16"
        android:paddingTop="@dimen/spacing_12"
        android:paddingEnd="@dimen/spacing_16"
        android:paddingBottom="@dimen/spacing_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/timeChip"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_40"
            android:layout_weight="1"
            android:background="@drawable/bg_top_chip"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_14"
            android:paddingEnd="@dimen/spacing_14">

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_block"
                android:textColor="@color/text_disabled"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:id="@+id/timeRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_8"
                android:text="@string/time"
                android:textColor="@color/accent_gold_light"
                android:textSize="@dimen/text_size_12" />

            <ImageButton
                android:id="@+id/btnEye"
                android:layout_width="@dimen/size_40"
                android:layout_height="@dimen/size_40"
                android:layout_marginStart="@dimen/size_130"
                android:background="@drawable/bg_top_chip"
                android:contentDescription="@string/eye_off"
                android:scaleType="centerInside"
                android:src="@drawable/ic_eye_off" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnExit"
            android:layout_width="@dimen/size_40"
            android:layout_height="@dimen/size_40"
            android:layout_marginStart="@dimen/spacing_8"
            android:background="@drawable/bg_top_icon_btn"
            android:contentDescription="@string/exit"
            android:padding="@dimen/spacing_10"
            android:scaleType="centerInside"
            android:src="@drawable/ic_exit"
            app:tint="@color/text_disabled" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/questionsRecycler"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_0"
        android:clipToPadding="false"
        android:paddingTop="@dimen/spacing_12"
        app:layout_constraintBottom_toTopOf="@id/finishButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginEnd="@dimen/spacing_16"
        android:layout_marginBottom="@dimen/spacing_16"
        android:backgroundTint="@color/accent_yellow"
        android:text="@string/finish_test"
        android:textColor="@color/main_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
